# DeFacto

./: .algokit.toml  .env.example  .gitignore  CLAUDE.md  DEMO_VIDEO_SCRIPT.md  INVESTOR_PITCH.md  ONE_LINER_OPTIONS.md  PITCH_SCRIPT_2MIN.md  README.md  SUBMISSION.md  TECHNICAL_WHITEPAPER.md  docker-compose.yml  package-lock.json  package.json
.algokit/localnet/: config.json
.claude/: settings.local.json
api/: .env.example  BACKEND_IMPLEMENTATION_TODO.md  README.md  requirements.txt
api/blockchain_data/: claims.json  state.json
api/scripts/: test_integration.py
api/src/: config.py  database.py  main.py
api/src/models/: claim.py
api/src/routers/: claims.py  predictions.py  users.py  validations.py  websocket.py
api/src/schemas/: claim.py  prediction.py  validation.py
api/src/services/: algorand.py  ipfs.py
contracts/: deploy.py  pyproject.toml  requirements.txt
contracts/src/: __init__.py  claim_registry.py  claim_registry_pyteal.py  mock_blockchain.py  reputation.py  validation.py
de-news/: .algokit.toml  README.md  de-news.code-workspace
de-news/.algokit/: .copier-answers.yml
de-news/projects/de-news-contracts/: .algokit.toml  (+2 more)
frontend/: README.md  package.json
frontend/docs/: FRONTEND_API_DOCUMENTATION.md  FRONTEND_DETAILED_TODO.md  FRONTEND_DEVELOPMENT_FLOW.md  FRONTEND_SETUP_SHADCN.md
legacy_docs/: DETAILED_IMPLEMENTATION_INSTRUCTIONS.md  DETAILED_IMPLEMENTATION_wCODE.md  GAME_PLAN.md  MASTER_INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README_FOR_TEAM.md  SYNC_POINTS.md  cursor_cheatsheet.txt
scripts/: dev.sh  setup.sh  test.sh
(+26 files in other folders)
